# claudex

./: .gitignore  CLAUDEX.md  Dockerfile  Makefile  README.md  build  claude-2.md  go.mod  go.sum  init-firewall.sh  main.go
cmd/claudex/: main.go
internal/buildctx/: .tmux.conf  .vimrc  CLAUDEX.md  Dockerfile  buildctx.go  init-firewall.sh
internal/buildctx/google-docs-mcp/: .gitignore  README.md  main.py  pyproject.toml
internal/buildctx/google-docs-mcp/google_docs_mcp/: auth.py  config.py  docs.py  exceptions.py  markdown_renderer.py  schemas.py
internal/cli/: cli.go
internal/commands/: auth.go  commands.go  commands_test.go
internal/containers/: containers.go  containers_test.go  list_test.go
internal/dockerx/: dockerx.go  fake.go
internal/run/: build_args_test.go  run.go  run_test.go
internal/ui/: list_workspace_entries_test.go  ui.go  ui_test.go
internal/workspace/: workspace.go  workspace_test.go
